--- a/blacklist.html
+++ b/blacklist.html
@@ -2,163 +2,164 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Document</title>
 </head>
 
 <body>
-    <!-- start navbar -->
-    <div class="upper-nav">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-6 text-right">
-                    <div class="logo">
-                        <img class="mt-2" src="./assets/images/logo.png" alt="" />
-                    </div>
-                </div>
-                <div class="col-sm-12 col-lg-6 text-right">
-                    <div class="login">
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>تسجيل الدخول</a>
-                                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل جديد</a>
-                            </li>
-                            <li>
-                                <a href="./ads-page.html" class="btn btn-add-ads">اضف اعلان جديد</a>
-                            </li>
-                            <li class="eng">
-                                <a href="#">English</a>
-                            </li>
-                            <li class="my-account-option">
-                                <form action="">
-                                    <div class="form-group">
-                                        <label for="exampleFormControlSelect1">ابو مالك</label>
-                                        <select class="form-control" id="exampleFormControlSelect1">
-                    <option><a href="#">حسابي</a></option>
-                    <option><a href="#">رسائلي</a></option>
-                    <option><a href="#">اعلاناتي</a></option>
-                    <option><a href="#">تسجيل الخروج</a></option>
-                  </select>
-                                    </div>
-                                </form>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <!-- start navbar -->
+  <div class="upper-nav">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-6 text-right">
+          <div class="logo">
+            <img class="mt-2" src="./assets/images/logo.png" alt="" />
+          </div>
         </div>
-    </div>
-    <!-- end navbar -->
-
-    <!-- start path  -->
-    <div class="path">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-12">
-                    <div>
-                        <span class="first"> <a href="#">الرئيسية</a></span>
-                        <span><a href="#">اسم القسم او الصفحة</a> </span>
-                    </div>
-                </div>
-            </div>
+        <div class="col-sm-12 col-lg-6 text-right">
+          <div class="login">
+            <ul class="list-unstyled">
+              <li>
+                <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>تسجيل
+                  الدخول</a>
+                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل
+                  جديد</a>
+              </li>
+              <li>
+                <a href="./ads-page.html" class="btn btn-add-ads">اضف اعلان جديد</a>
+              </li>
+              <li class="eng">
+                <a href="#">English</a>
+              </li>
+              <li class="my-account-option">
+                <form action="">
+                  <div class="form-group">
+                    <label for="exampleFormControlSelect1">ابو مالك</label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                      <option><a href="#">حسابي</a></option>
+                      <option><a href="#">رسائلي</a></option>
+                      <option><a href="#">اعلاناتي</a></option>
+                      <option><a href="#">تسجيل الخروج</a></option>
+                    </select>
+                  </div>
+                </form>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- end path -->
+  </div>
+  <!-- end navbar -->
 
-    <div class="blacklist">
-        <div class="container">
-            <h5>البحث في القائمة السوداء</h5>
-            <p>
-                القائمة السوداء هي قائمة بإرقام حسابات وأرقام جوالات من يقومون بإساءة إستخدام الموقع لأغراض ممنوعه مثل الغش أو الأحتيال أو مخالفة قوانين الموقع
+  <!-- start path  -->
+  <div class="path">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-12">
+          <div>
+            <span class="first"> <a href="#">الرئيسية</a></span>
+            <span><a href="#">اسم القسم او الصفحة</a> </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end path -->
+
+  <div class="blacklist">
+    <div class="container">
+      <h5>البحث في القائمة السوداء</h5>
+      <p>
+        القائمة السوداء هي قائمة بإرقام حسابات وأرقام جوالات من يقومون بإساءة إستخدام الموقع لأغراض ممنوعه مثل
+        الغش أو الأحتيال أو مخالفة قوانين الموقع
+      </p>
+      <div class="row">
+        <div class="col-sm-12">
+          <form action="">
+            <input type="text" name="" id="" placeholder="ادخل رقم الحساب هنا او رقم الجوال او اسم المعلن...">
+            <button type="submit">فحص</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- start footer -->
+  <footer class="pt-5 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-4">
+          <div class="logo-content-logo">
+            <div class="logo mb-3" data-aos="fade-up">
+              <img src="./assets/images/logo-footer.png" alt="" />
+            </div>
+            <p class="text-white">
+              مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة
+              والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون
+              المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
             </p>
-            <div class="row">
-                <div class="col-sm-12">
-                    <form action="">
-                        <input type="text" name="" id="" placeholder="ادخل رقم الحساب هنا او رقم الجوال او اسم المعلن...">
-                        <button type="submit">فحص</button>
-                    </form>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="help-content">
+            <h5 class="text-white pr-3">روابط اخرى</h5>
+            <ul class="text-white">
+              <li><a class="text-white" href="./contact.htm">اتصل بنا</a></li>
+              <li><a class="text-white" href="">اتفاقية الاستخدام</a></li>
+              <li>
+                <a class="text-white" href="./archive.html">سياسة المحتوى</a>
+              </li>
+              <li>
+                <a class="text-white" href="./ads-page.html">اضف اعلانك</a>
+              </li>
+              <li><a class="text-white" href="">حسابي</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="social-content">
+            <h5 class="text-white">اشترك في قائمتنا البريدية</h5>
+            <form>
+              <input type="email" placeholder="بريدك الالكتروني هنا" /><br />
+              <button>اشترك الان</button>
+            </form>
+            <div class="social">
+              <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+              <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+              <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+              <span><a href="#"><i class="fas  fa-envelope"></i></a></span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <!-- start footer -->
-    <footer class="pt-5 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-4">
-                    <div class="logo-content-logo">
-                        <div class="logo mb-3" data-aos="fade-up">
-                            <img src="./assets/images/logo-footer.png" alt="" />
-                        </div>
-                        <p class="text-white">
-                            مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="help-content">
-                        <h5 class="text-white pr-3">روابط اخرى</h5>
-                        <ul class="text-white">
-                            <li><a class="text-white" href="./contact.htm">اتصل بنا</a></li>
-                            <li><a class="text-white" href="">اتفاقية الاستخدام</a></li>
-                            <li>
-                                <a class="text-white" href="./archive.html">سياسة المحتوى</a>
-                            </li>
-                            <li>
-                                <a class="text-white" href="./ads-page.html">اضف اعلانك</a>
-                            </li>
-                            <li><a class="text-white" href="">حسابي</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="social-content">
-                        <h5 class="text-white">اشترك في قائمتنا البريدية</h5>
-                        <form>
-                            <input type="email" placeholder="بريدك الالكتروني هنا" /><br />
-                            <button>اشترك الان</button>
-                        </form>
-                        <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="copy">
+      <div class="container">
+        <h5 class="">جميع الحقوق محفوظه فنون المسلم 2020</h5>
+        <div class="logo-funun">
+          <span class="text-white">تصميم وبرمجة</span>
+          <img src="./assets/images/funun.png" />
         </div>
-        <div class="copy">
-            <div class="container">
-                <h5 class="">جميع الحقوق محفوظه فنون المسلم 2020</h5>
-                <div class="logo-funun">
-                    <span class="text-white">تصميم وبرمجة</span>
-                    <img src="./assets/images/funun.png" />
-                </div>
-                <div class="clear"></div>
-            </div>
-        </div>
-    </footer>
-    <!-- end footer -->
+        <div class="clear"></div>
+      </div>
+    </div>
+  </footer>
+  <!-- end footer -->
 
 
 
-    <script src="./assets/js/jquery-3.3.1.min.js"></script>
-    <script src="./assets/js/popper.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/jquery-3.3.1.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
