--- a/add-ads.html
+++ b/add-ads.html
@@ -25,8 +25,10 @@
                     <div class="login">
                         <ul class="list-unstyled">
                             <li>
-                                <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>تسجيل الدخول</a>
-                                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل جديد</a>
+                                <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>تسجيل
+                                    الدخول</a>
+                                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل
+                                    جديد</a>
                             </li>
                             <li>
                                 <a href="./ads-page.html" class="btn btn-add-ads">اضف اعلان جديد</a>
@@ -63,9 +65,9 @@
             <form action="">
                 <div class="image-upload">
                     <label class="file-upload" for="file-input">
-            <i class="fas fa-camera"></i>
-            <p id="file-name"></p>
-          </label><br />
+                        <i class="fas fa-camera"></i>
+                        <p id="file-name"></p>
+                    </label><br />
                     <input id="file-input" type="file" />
                 </div>
                 <div class="container">
@@ -80,32 +82,32 @@
                             <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
                             <i class="fas fa-calendar"></i>
                             <select class="form-control" id="exampleFormControlSelect1">
-                <option selected disapled></i>اختر الفئة</option>
-                <option>2</option>
-              </select>
+                                <option selected disapled></i>اختر الفئة</option>
+                                <option>2</option>
+                            </select>
                         </div>
                         <input class="input-number" type="text" name="" id="" /><span>ريال</span>
                         <ul class="list-unstyled ul-types">
                             <li>
                                 <label class="container">
-                  <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
+                                    <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
+                                    <input type="checkbox" checked="checked" />
+                                    <span class="checkmark"></span>
+                                </label>
                             </li>
                             <li>
                                 <label class="container">
-                  <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
+                                    <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
+                                    <input type="checkbox" checked="checked" />
+                                    <span class="checkmark"></span>
+                                </label>
                             </li>
                             <li>
                                 <label class="container">
-                  <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
+                                    <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
+                                    <input type="checkbox" checked="checked" />
+                                    <span class="checkmark"></span>
+                                </label>
                             </li>
                         </ul>
                     </div>
@@ -128,7 +130,9 @@
                             <img src="./assets/images/logo-footer.png" alt="" />
                         </div>
                         <p class="text-white">
-                            مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
+                            مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة
+                            والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون
+                            المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
                         </p>
                     </div>
                 </div>
@@ -156,14 +160,10 @@
                             <button>اشترك الان</button>
                         </form>
                         <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
+                            <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                            <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+                            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                            <span><a href="#"><i class="fas  fa-envelope"></i></a></span>
                         </div>
                     </div>
                 </div>
