--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
           <div class="card card-grow mt-2" style="max-width: 100%;" data-aos="fade-in">
             <div class="row no-gutters">
               <div class="col-md-4">
+                <i class="fas fa-check-circle verfiy"></i>
                 <a href="#">
                   <img src="./assets/images/house.jpg" width="100%" alt="" />
                 </a>
@@ -364,6 +365,7 @@
           <div class="card card-grow mt-2" style="max-width: 100%;" data-aos="fade-in">
             <div class="row no-gutters">
               <div class="col-md-4">
+                <i class="fas fa-check-circle verfiy"></i>
                 <a href="#">
                   <img src="./assets/images/car-ads.jpg" width="100%" alt="" />
                 </a>
