--- a/my-inbox.html
+++ b/my-inbox.html
@@ -2,167 +2,170 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Document</title>
 </head>
 
 <body>
-    <!-- start navbar -->
-    <div class="upper-nav">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-6 text-right">
-                    <div class="logo">
-                        <img class="mt-2" src="./assets/images/logo.png" alt="" />
-                    </div>
-                </div>
-                <div class="col-sm-12 col-lg-6 text-right">
-                    <div class="login">
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>تسجيل الدخول</a>
-                                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل جديد</a>
-                            </li>
-                            <li>
-                                <a href="./ads-page.html" class="btn btn-add-ads">اضف اعلان جديد</a>
-                            </li>
-                            <li class="eng">
-                                <a href="#">English</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <!-- start navbar -->
+  <div class="upper-nav">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-6 text-right">
+          <div class="logo">
+            <img class="mt-2" src="./assets/images/logo.png" alt="" />
+          </div>
         </div>
+        <div class="col-sm-12 col-lg-6 text-right">
+          <div class="login">
+            <ul class="list-unstyled">
+              <li>
+                <!-- <a href="./account.html" class="btn btn-login"><i class="fas fa-user"></i>حسابي
+                  الدخول</a>
+                <a href="./account.html" class="btn btn-rigister"><i class="fas fa-plus"></i>تسجيل
+                  جديد</a> -->
+                <a href="./account.html" class="btn btn-login btn-my-account"><i class="fas fa-user"></i>حسابي</a>
+                <a href="./account.html" class="btn btn-rigister btn-my-account"><i class="far fa-star"></i>المفضلة</a>
+                <a href="./account.html" class="btn btn-rigister btn-my-account"><i class="fas fa-sign-out-alt"></i>تسجيل الخروج</a>
+              </li>
+              <li>
+                <a href="./ads-page.html" class="btn btn-add-ads">اضف اعلان جديد</a>
+              </li>
+              <li class="eng">
+                <a href="#">English</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- end navbar -->
+  </div>
+  <!-- end navbar -->
 
-    <!-- start path  -->
-    <div class="path">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-12">
-                    <div>
-                        <span class="first"> <a href="#">الرئيسية</a></span>
-                        <span><a href="#">اسم القسم او الصفحة</a> </span>
-                    </div>
-                </div>
-            </div>
+  <!-- start path  -->
+  <div class="path">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-12">
+          <div>
+            <span class="first"> <a href="#">الرئيسية</a></span>
+            <span><a href="#">اسم القسم او الصفحة</a> </span>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- end path -->
+  </div>
+  <!-- end path -->
 
-    <!-- start my inpox -->
-    <div class="my-inbox">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-12">
-                    <div class="card">
-                        <div class="card-header">
-                            سيارة جيلي 2014
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-user"></i>الى ابو عبده</h5>
-                            <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
-                            <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- rebeat -->
-                <div class="col-sm-12 col-lg-12">
-                    <div class="card">
-                        <div class="card-header">
-                            يارس 2019
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-user"></i>الى عمر علي</h5>
-                            <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
-                            <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
-                        </div>
-                    </div>
-                </div>
+  <!-- start my inpox -->
+  <div class="my-inbox">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-12">
+          <div class="card">
+            <div class="card-header">
+              سيارة جيلي 2014
             </div>
+            <div class="card-body">
+              <h5 class="card-title"><i class="fas fa-user"></i>الى ابو عبده</h5>
+              <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
+              <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
+            </div>
+          </div>
         </div>
+        <!-- rebeat -->
+        <div class="col-sm-12 col-lg-12">
+          <div class="card">
+            <div class="card-header">
+              يارس 2019
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><i class="fas fa-user"></i>الى عمر علي</h5>
+              <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
+              <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- end my inpox -->
+  </div>
+  <!-- end my inpox -->
 
-    <!-- start footer -->
-    <footer class="pt-5 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-4">
-                    <div class="logo-content-logo">
-                        <div class="logo mb-3" data-aos="fade-up">
-                            <img src="./assets/images/logo-footer.png" alt="" />
-                        </div>
-                        <p class="text-white">
-                            مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="help-content">
-                        <h5 class="text-white pr-3">روابط اخرى</h5>
-                        <ul class="text-white">
-                            <li><a class="text-white" href="./contact.htm">اتصل بنا</a></li>
-                            <li><a class="text-white" href="">اتفاقية الاستخدام</a></li>
-                            <li>
-                                <a class="text-white" href="./archive.html">سياسة المحتوى</a>
-                            </li>
-                            <li>
-                                <a class="text-white" href="./ads-page.html">اضف اعلانك</a>
-                            </li>
-                            <li><a class="text-white" href="">حسابي</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="social-content">
-                        <h5 class="text-white">اشترك في قائمتنا البريدية</h5>
-                        <form>
-                            <input type="email" placeholder="بريدك الالكتروني هنا" /><br />
-                            <button>اشترك الان</button>
-                        </form>
-                        <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
-                        </div>
-                    </div>
-                </div>
+  <!-- start footer -->
+  <footer class="pt-5 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-4">
+          <div class="logo-content-logo">
+            <div class="logo mb-3" data-aos="fade-up">
+              <img src="./assets/images/logo-footer.png" alt="" />
             </div>
+            <p class="text-white">
+              مع ارتفاع أسعار تصميم مواقع الإنترنت بشكل مٌبالغ فيه أصبحت معظم الشركات والمؤسسات الناشئة
+              والصغير في البحث عن قالب شركة مميز يعبر عما تقدمه من خدمات بشكل راقي ويكون بسعر مناسب، (فنون
+              المسلم) تقدم تصميم قوالب شركات احترافية، نحن نعلم أهمية أن يكون
+            </p>
+          </div>
         </div>
-        <div class="copy">
-            <div class="container">
-                <h5 class="">جميع الحقوق محفوظه فنون المسلم 2020</h5>
-                <div class="logo-funun">
-                    <span class="text-white">تصميم وبرمجة</span>
-                    <img src="./assets/images/funun.png" />
-                </div>
-                <div class="clear"></div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="help-content">
+            <h5 class="text-white pr-3">روابط اخرى</h5>
+            <ul class="text-white">
+              <li><a class="text-white" href="./contact.htm">اتصل بنا</a></li>
+              <li><a class="text-white" href="">اتفاقية الاستخدام</a></li>
+              <li>
+                <a class="text-white" href="./archive.html">سياسة المحتوى</a>
+              </li>
+              <li>
+                <a class="text-white" href="./ads-page.html">اضف اعلانك</a>
+              </li>
+              <li><a class="text-white" href="">حسابي</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="social-content">
+            <h5 class="text-white">اشترك في قائمتنا البريدية</h5>
+            <form>
+              <input type="email" placeholder="بريدك الالكتروني هنا" /><br />
+              <button>اشترك الان</button>
+            </form>
+            <div class="social">
+              <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+              <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+              <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+              <span><a href="#"><i class="fas  fa-envelope"></i></a></span>
             </div>
+          </div>
         </div>
-    </footer>
-    <!-- end footer -->
+      </div>
+    </div>
+    <div class="copy">
+      <div class="container">
+        <h5 class="">جميع الحقوق محفوظه فنون المسلم 2020</h5>
+        <div class="logo-funun">
+          <span class="text-white">تصميم وبرمجة</span>
+          <img src="./assets/images/funun.png" />
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </footer>
+  <!-- end footer -->
 
 
-    <script src="./assets/js/jquery-3.3.1.min.js"></script>
-    <script src="./assets/js/popper.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/jquery-3.3.1.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
